[Día 1] feat(schema and docker postgresql): db implementation

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ config.local.yml
 # =====================================================================
 postgres_data/
 pgadmin_data/
-data/
+/data/
 volumes/
 
 # =====================================================================
